--- a/chooseYourOwnAdventure/src/byui/cit260/chooseYourOwnAdventure/frames/GameMenuFrame.form
+++ b/chooseYourOwnAdventure/src/byui/cit260/chooseYourOwnAdventure/frames/GameMenuFrame.form
@@ -23,13 +23,112 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="400" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
+                      <Component id="jLabel1" min="-2" pref="205" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="19" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="jbquit" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jbSaveGame" alignment="0" pref="156" max="32767" attributes="0"/>
+                              <Component id="jbSleep" alignment="0" max="32767" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                  <Component id="jpbCheckHealth" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jbChangeLocation" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jbCollectResources" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jbFindSurvivors" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jbRescueOptions" alignment="0" max="32767" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                  </Group>
+              </Group>
+              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="300" max="32767" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+              <Component id="jLabel1" pref="43" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+              <Component id="jpbCheckHealth" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+              <Component id="jbChangeLocation" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jbCollectResources" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jbRescueOptions" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jbFindSurvivors" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jbSleep" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jbSaveGame" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jbquit" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
+  <SubComponents>
+    <Component class="javax.swing.JButton" name="jbChangeLocation">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Change Locations"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jbFindSurvivors">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Find Survivors"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jbCollectResources">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Collect Resources"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jbRescueOptions">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="RescueOptions"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jbSleep">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Sleep"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JProgressBar" name="jpbCheckHealth">
+      <Properties>
+        <Property name="toolTipText" type="java.lang.String" value="Total Health"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jbSaveGame">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Save Game"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jbquit">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Quit"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel1">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Eurostile" size="36" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Game Menu"/>
+      </Properties>
+    </Component>
+  </SubComponents>
 </Form>
