Finished the Map

--- a/chooseYourOwnAdventure/src/byui/cit260/chooseYourOwnAdventure/frames/GameMenuFrame.form
+++ b/chooseYourOwnAdventure/src/byui/cit260/chooseYourOwnAdventure/frames/GameMenuFrame.form
@@ -171,6 +171,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="RescueOptions"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbRescueOptionsActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
