--- a/chooseYourOwnAdventure/src/byui/cit260/chooseYourOwnAdventure/frames/CollectResourcesFrame.form
+++ b/chooseYourOwnAdventure/src/byui/cit260/chooseYourOwnAdventure/frames/CollectResourcesFrame.form
@@ -69,10 +69,7 @@
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jrbFood" min="-2" max="-2" attributes="0"/>
                                       <Component id="jrbVines" min="-2" max="-2" attributes="0"/>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jrbSleep" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace min="1" pref="1" max="-2" attributes="0"/>
-                                      </Group>
+                                      <Component id="jrbSleep" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
